<!--
DTube for DTube is an Open Source app realized by Leonardo Rignanese
 GNU GENERAL PUBLIC LICENSE  Version 2, June 1991
-->
<resources>

    <!--remove this from your translations-->
    <string name="launcher_name" translatable="false">Dtube Lite</string>
    <string name="actionbar_name" translatable="false">DTube</string>
    <string name="urlDTubeMobile" translatable="false">https://d.tube/</string>
    <string name="urlMessages" translatable="false">https://d.tube/#!/login</string>
    <string name="home" translatable="false">Home</string>
    <string name="top" translatable="false">Top</string>
    <string name="mainDeveloper" translatable="false">Haja sharif</string>
    <!--end remove this from your translations-->

    <!--  !!!  PLEASE TRANSLATE KEEPING THIS FORMAT.  !!!   -->

    <!-- TRANSLATION IS MADE BY: *YOURNAME* -->

    <!--menu string-->
    <string name="refresh">Refresh</string>
    <string name="openInBrowser">Open using the Browser</string>
    <string name="settings">Settings</string>
    <string name="share">Share this app</string>
    <!--end menu string-->

    <!--settings-->
    <string name="prefCat_fb_settings_title">DTube Settings</string>
    <string name="prefCat_app_settings_title">App Settings</string>
    <string name="prefCat_app_information_title">App Information</string>
    <string name="title_recentNewsFirst">Order the news feed by most recent</string>
    <string name="summary_recentNewsFirst">Instead of by top stories</string>
    <string name="title_centerTextPosts">Center the posts text</string>
    <string name="summary_centerTextPosts">The text of each post will be centered</string>
    <string name="summary_addSpaceBetweenPosts">There will be more space between posts</string>
    <string name="title_addSpaceBetweenPosts">More space between posts</string>
    <string name="summary_creditsCssThemes">Thanks for the fantastic themes!</string>
    <string name="summary_theme">Choose the theme that you like</string>
    <string name="title_fixedBar">Fixed top bar</string>
    <string name="summary_fixedBar">The blue bar will remain stuck on the top.</string>
    <string name="title_hideSponsoredPosts">Don\'t show sponsored posts</string>
    <string name="summary_hideSponsoredPosts">Some sponsored posts will be hidden</string>
    <string name="title_downloadImages">Save Data </string>
    <string name="summary_downloadImages">Don\'t download images</string>
    <string name="summary_allowGeolocation">DTube will be able to access to your position</string>
    <string name="title_allowGeolocation">Allow the use of GPS</string>
    <string name="version">Version</string>
    <string name="credits">Credits</string>
    <string name="prefCat_otherCredits_title">Other</string>
    <string name="prefCat_developersCredits_title">Developers</string>
    <string name="summary_LeonardoRignanese">Creator and developer of the app</string>
    <string name="prefCat_translatorsCredits_title">Translators</string>
    <string name="prefCat_designersCredits_title">Designers</string>
    <string name="donate">Donate</string>
    <string name="donateToContribute">I chose to do it for free. Can you offer me a coffee?</string>
    <string name="summary_you">It\'s also thanks to you that this app exists</string>
    <string name="title_you">You are important</string>
    <!--end settings-->

    <!--page error-->
    <string name="titleNoConnection">Oops, there is a problem!</string>
    <string name="descriptionNoConnection">Try to check the connection and refresh.</string>
    <string name="awards">This is an Open Source app.</string>
    <!--end page error-->

    <!--other-->
    <string name="thanks">Thanks!</string>
    <string name="downloadOrShareWithBrowser">Opening browser you can download or share this image.</string>
    <string name="shareThisLink">Share this link</string>
    <string name="summary_FaceSlim">Without them, I couldn\'t add some attractive functions. If you are a developer, you have to see their massive work!</string>
    <string name="summary_lRemainl">Creator of the magnificent logo</string>
    <string name="summary_Pharetra">Full of talent and creativity</string>
    <string name="exit">Exit</string>
    <string name="downloadThisApp" translatable="false">Download DTube for DTube: \n https://play.google.com/store/apps/details?id=com.dtube.steem</string>
    <string name="noPersonalInformationAreShared">No personal or private information about you or your device is collected or transmitted by this app !</string>
    <string name="title_theme">Themes</string>
    <string name="applyingChanges">Applying changes!</string>
    <string name="title_textSize">Text Size</string>
    <string name="title_enableFastShare">Enable Fast Share</string>
    <string name="summary_enableFastShare">With Fast Share you can share any link simply tapping and holding it</string>
    <string name="summary_textSize">Choose the text size that you prefer</string>
    <string name="refreshToApply">Refresh DTube to apply the changes</string>
    <string name="summary_AdvancedWebView">Part of this app is based on their work</string>
    <string name="title_translate">Would you translate this app?</string>
    <string name="summary_translate">Use my WebTool: tap here, select the language that you know, generate the builder, correct errors, generate and send me the \'strings.xml\' file by email</string>
    <string name="title_removeMessengerDownload">Remove \'Download Messenger\' messages</string>
    <string name="summary_removeMessengerDownload">The ads with \'Install Messenger\' will be hidden</string>
    <string name="summary_SaschaHa">A very talented and smart guy that helped me a lot and has become a friend. Tap here to see his incredible work!</string>
    <string name="supportMe">Support me</string>
    <string name="donateWithSteem">Donate with Steem</string>
    <string name="messages">Login</string>
    <string name="close">Close </string>
    <string name="acceptPermissionAndRetry">Accept permissions and retry!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="downloadingPhoto">Downloading photo!</string>
    <string name="askDownloadPhoto">Download photo?</string>
    <string name="holdImageToDownload">Hold the image to download!</string>
    <string name="title_rate">Rate this app with 5 stars</string>
    <string name="summary_rate">You can support me writing 5 stars review in the PlayStore. Please if something doesn\'t work, contact me before write a bad review</string>
    <string name="title_enableMessagesShortcut">Enable messages shortcut</string>
    <string name="summary_enableMessagesShortcut">Enabling this, the DTube messages tab will open when you tap on DTube icon</string>
    <string name="title_useDTubeSubfolderToDownloadedFiles">Use \'DTube\' subfolder</string>
    <string name="summary_useDTubeSubfolderToDownloadedFiles">Save images in a subfolder rather than in the folder \'Download\'</string>
    <string name="shareLink">Share this page</string>
    <string name="title_enableNotifications">Enable Notifications</string>
    <string name="noNotificationEnjoyLife">I am looking for the best way to integrate them. In the meanwhile, enjoy a life without interruptions from DTube :)</string>

    <!--end other-->
</resources>

    <!-- PLAY STORE PAGE

DESCRIPTION ( max 80 char! shape and adapt it. use http://www.charcounter.com/ ):
The DTube Experience into 400kb

FULL DESCRIPTION:
ATTENTION: This app may not be suitable for who use it frequently. 

Why do I download DTube for DTube?
- It is lightweight: it weighs less than 1 Mb;
- It has simple, modern design: there is only what you need;
- It is Open source: the code of this app is online on GitHub, anyone can verify the authenticity of the app and contribute to its development.
- It is free and without ads;
- it is not intrusive;
- It respect your privacy: this app doesn't require special permits. Without consensus DTube can not access to any data of your mobile phone;


The app is in full development, so still doesn't work:
- Notifications;

Link to GitHub
https://github.com/rignaneseleo/DTube-for-DTube

***Take note that this is not an official app from DTube***
This is a project which meant to make people life easier. This app will launch DTube official website. All credit goes to DTube team. It is provided free for all without any Ads.
    -->

